Fix on mobile menu

--- a/src/index.css
+++ b/src/index.css
@@ -5962,7 +5962,7 @@ button.close {
   padding-top: 20px;
   padding-bottom: 20px;
   font-size: x-large;
-  line-height: 55px; }
+  line-height: 75px; }
   .menu-container ul {
     list-style-type: none; }
   .menu-container a {
