--- a/views/header/header.scss
+++ b/views/header/header.scss
@@ -76,7 +76,7 @@
 	padding-top: 20px;
 	padding-bottom: 20px;
 	font-size: x-large;
-	line-height: 55px;
+	line-height: 75px;
 
 	ul {
 		list-style-type: none;
